# stock-checker

./: .gitignore  README.rst  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
utils/: stores.py
