[tool.poetry]
name = "stock-checker"
version = "0.1.0"
description = ""
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
yagmail = "^0.14.245"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
